<resources>
    <string name="app_name">Brushing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">黎哲綸</string>
    <string name="nav_header_subtitle">curry123987@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_parentmodel">家長控制區</string>
    <string name="menu_set">設定</string>
    <string name="menu_support">支援</string>
    <string name="menu_about">關於</string>
    <string name="delete">刪除個人檔案</string>
    <string name="edit">編輯個人檔案</string>
    <string name="report">刷牙紀錄</string>
    <string name="todo">TODO</string>
    <string name="add_award">新增獎勵</string>
</resources>