<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jack.brushing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_parentmodel"
        android:name="com.jack.brushing.ui.parent.ParentFragment"
        android:label="@string/menu_parentmodel"
        tools:layout="@layout/fragment_parent" />

    <fragment
        android:id="@+id/nav_set"
        android:name="com.jack.brushing.ui.set.SetFragment"
        android:label="@string/menu_set"
        tools:layout="@layout/fragment_set" />
    <fragment
        android:id="@+id/nav_support"
        android:name="com.jack.brushing.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.jack.brushing.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>